{
    "name": "InputActions",
    "maps": [
        {
            "name": "Flight",
            "id": "d9df74b1-1da2-4d3a-a20d-c6900a387c80",
            "actions": [
                {
                    "name": "Pitch",
                    "type": "Value",
                    "id": "7bb373f2-205d-49d7-a101-ecf59ba27310",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Roll",
                    "type": "Value",
                    "id": "96b88db8-fc8a-4b42-930e-4bb163fd3484",
                    "expectedControlType": "Axis",
                    "processors": "Invert",
                    "interactions": ""
                },
                {
                    "name": "YawLeft",
                    "type": "Button",
                    "id": "24c03cd7-6f3e-4775-8ab3-f1d5954dc442",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "YawRight",
                    "type": "Button",
                    "id": "ca23a5fe-74b4-4db8-b7b7-e5ab2a377fa2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Accelerate",
                    "type": "Value",
                    "id": "2673e1af-18e5-4dd6-9218-1ca8fb03522d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Decelerate",
                    "type": "Value",
                    "id": "2dbd1d97-e728-4f7c-be16-dbb67a234d6a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "1e71c882-38f5-4c2a-aa00-0c53d2e69de7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Target",
                    "type": "Button",
                    "id": "210f2dfa-6d50-4e2f-b923-9ff8635b7d53",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Gun",
                    "type": "Button",
                    "id": "e07bc031-9077-40d7-ae3b-db147a1a07e5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Missile",
                    "type": "Button",
                    "id": "9eb71a89-67ec-44a5-b01b-96812f738f4f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "48e7586d-b83c-4fa8-9b0f-ca4b95d88497",
                    "path": "<Gamepad>/leftStick/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pitch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "edcae297-3bab-46c6-86ba-fa1c70641645",
                    "path": "<Gamepad>/leftStick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Roll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "118eab3b-4bcc-4053-bd26-2e698248691e",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "YawLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2477ccc5-55d6-409f-bc36-68e2fac1378f",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "YawRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ce869451-3f8b-47d8-b092-6038691a334c",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Accelerate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "71885a06-9b61-4f5d-8723-0eea8ff77822",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Decelerate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e57051e0-5e4c-4777-93c0-dd789dc90ae4",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c3b71a8b-b178-4705-a1b8-47018935c847",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Target",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "efb536a4-0128-4ec4-a109-58e52baf65d1",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Gun",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d4438556-5b0c-4a7b-93e6-248bbfbf97d1",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Missile",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}